# Myelin

./: .gitignore  Cargo.toml  LICENSE  MYELIN_ARTEFACT_CLEANUP.md  MYELIN_CKB_PROJECTION_AUDIT.md  MYELIN_CKB_SEMANTIC_DEVIATIONS.md  MYELIN_CLI_AUDIT.md  MYELIN_CONSENSUS_COMPLETENESS.md  MYELIN_PRODUCTION_GATE.md  MYELIN_PRODUCTION_REHEARSAL_REPORT.md  MYELIN_SCHEDULER_AUDIT.md  MYELIN_SESSION_L2_PLAN.md  MYELIN_STALE_SURFACE_AUDIT.md  MYELIN_SWARM_AUDIT_MEMPOOL_CONSENSUS.md  MYELIN_SWARM_AUDIT_STATE_DA.md  MYELIN_SWARM_AUDIT_WHOLEREPO.md  MYELIN_TEEWORLDS_REPRODUCIBILITY.md  MYELIN_USE_CASE_POSITIONING.md  MYELIN_WEBSITE_AUDIT.md  README.md  mkdocs.yml  shell.nix
cellscript/: .gitignore  .gitmodules  AGENTS.md  BRANCHES.md  CELLSCRIPT_0_21_STALE_AUDIT.md  CHANGELOG.md  CODING_STYLE.local.md  CODING_STYLE.md  Cargo.toml  README.md  README_CH.md  README_REVIEW.md
cellscript/.github/workflows/: ci.yml  release.yml  website-build.yml
cellscript/crates/cellscript-ckb-adapter/: Cargo.toml
cellscript/crates/cellscript-wasm/: Cargo.toml
cellscript/docs/: CELLSCRIPT_0_15_RELEASE_NOTES_DRAFT.md  CELLSCRIPT_0_15_ROADMAP.md  CELLSCRIPT_0_16_RELEASE_NOTES_DRAFT.md  CELLSCRIPT_0_18_ROADMAP.md  CELLSCRIPT_0_19_ROADMAP.md  CELLSCRIPT_0_20_ROADMAP.md  CELLSCRIPT_0_21_ROADMAP.md  CELLSCRIPT_CAPACITY_AND_BUILDER_CONTRACT.md  CELLSCRIPT_CELLFABRIC_BRIDGE.md  CELLSCRIPT_CELL_MODEL_SYNTAX_AUDIT_2026_07_05.md  CELLSCRIPT_CKB_ADAPTER.md  CELLSCRIPT_CKB_DEPLOYMENT_MANIFEST.md  CELLSCRIPT_CKB_ECOSYSTEM_REUSE_AUDIT.md  CELLSCRIPT_CKB_STD_COMPAT.md  CELLSCRIPT_COLLECTIONS_SUPPORT_MATRIX.md  CELLSCRIPT_ENTRY_WITNESS_ABI.md  CELLSCRIPT_EXAMPLE_BUSINESS_FLOWS.md  CELLSCRIPT_GATE_POLICY.md  CELLSCRIPT_GATE_REDUNDANCY_AUDIT.md  CELLSCRIPT_GRAMMAR_GOVERNANCE_RFC.md  CELLSCRIPT_LINEAR_OWNERSHIP.md  CELLSCRIPT_METADATA_SYSTEM_AUDIT.md  CELLSCRIPT_MOLECULE_IFRN_DESIGN_SPACE_IMPROVEMENT_REPORT.md  CELLSCRIPT_NAMED_CELLDEP_BINDING_RFC.md  CELLSCRIPT_OUTPUT_BINDINGS.md  CELLSCRIPT_PACKAGE_PROVENANCE_AND_DEPLOYMENT_IDENTITY.md  CELLSCRIPT_REGISTRY_PHASE1.md  CELLSCRIPT_REGISTRY_PRODUCTION_BOUNDARY_ADR.md  CELLSCRIPT_RUNTIME_ERROR_CODES.md  CELLSCRIPT_SCHEDULER_HINTS.md  CELLSCRIPT_SURFACE_ELEGANCE_RFC.md  CELLSCRIPT_SYNTAX_COMBO_AUDIT_METHODOLOGY.md  CELLSCRIPT_WEBSITE_PARADIGM_UPGRADE_RFC.md  README.md
cellscript/docs/0.17/: CELLSCRIPT_0_17_ROADMAP.md  ickb_cellscript_gap_matrix.md  ickb_cellscript_maturity_methodology.md  ickb_diff_results.md  ickb_discovery.md  ickb_final_report.md  ickb_production_equivalence_gate.md  ickb_progress.md  ickb_semantics.md  review_findings_closure.md
cellscript/docs/0.20/: CELLSCRIPT_MULTI_FILE_AUDIT_V2.md  CELLSCRIPT_MULTI_FILE_PROJECT_SUPPORT_AUDIT.md  CELLSCRIPT_PROTOCOL_MULTI_FILE_EVIDENCE.md  compiler_swarm_audit.md
cellscript/docs/examples/: ckb_hashing.md  collections_matrix.md  output_append.md  token_amm_bootstrap.md
cellscript/docs/releases/: CELLSCRIPT_0_13_2_ACCEPTANCE_COMMUNITY_POST.md  CELLSCRIPT_0_13_2_RELEASE_NOTES.md  CELLSCRIPT_0_13_RELEASE_SCOPE.md  CELLSCRIPT_0_14_RELEASE_NOTES.md  CELLSCRIPT_0_14_RELEASE_NOTES_DRAFT.md  CELLSCRIPT_0_15_RELEASE_NOTES.md  CELLSCRIPT_0_16_1_RELEASE_NOTES.md  CELLSCRIPT_0_16_2_RELEASE_NOTES.md  CELLSCRIPT_0_16_RELEASE_NOTES.md  CELLSCRIPT_0_16_TO_0_20_RELEASE_NOTES.md  (+4 more)
cellscript/examples/: Cell.toml  amm_pool.cell  atomic_swap.cell  launch.cell  multi_phase_dao.cell  multisig.cell  nft.cell  timelock.cell  token.cell  vesting.cell
cellscript/roadmap/: CELLSCRIPT_0_13_ROADMAP.md  CELLSCRIPT_0_13_TODOLIST.md  CELLSCRIPT_0_14_ROADMAP.md  CELLSCRIPT_0_15_ROADMAP.md  CELLSCRIPT_0_16_ROADMAP.md  CELLSCRIPT_0_21_CLI_UX_PLAN.md  CELLSCRIPT_0_22_TYPE_AND_SET_THEORY_ROADMAP.md  CELLSCRIPT_ROADMAP.md  CELLSCRIPT_ROADMAP_OVERVIEW.md
cellscript/scripts/: cellscript_0_14_scope_audit.sh  cellscript_cellfabric_bridge_smoke.sh  cellscript_ckb_adapter_acceptance.sh  cellscript_ckb_ecosystem_reuse_gate.sh  cellscript_ckb_release_gate.sh  cellscript_ckb_stateful_scenarios.sh  cellscript_gate.sh  cellscript_strict_backend_audit.py  cellscript_strict_backend_audit.sh  cellscript_syntax_combo_audit.py  cellscript_syntax_combo_audit.sh  check_cellscript_skill_pack.py  ckb_cellscript_acceptance.sh  evolving_dob_devnet_workflow.py  evolving_dob_registry_pressure.py  install.sh  novaseal_agreement_devnet_stateful_live.py  novaseal_bip340_tcb_review.py  novaseal_btc_anchor_contract.py  novaseal_btc_spv_evidence_adapter.py  novaseal_devnet_stateful_live.py  novaseal_external_evidence_handoff_bundle.py  novaseal_fiber_node_experiments.py  novaseal_planned_profiles_devnet_stateful_live.py  novaseal_profile_operator_fixtures.py  validate_cellscript_tooling_release.py  validate_ckb_cellscript_production_evidence.py
cellscript/src/: aggregate_lowering.rs  assumptions.rs  ckb_abi.rs  lib.rs  main.rs  mcp_main.rs  repl.rs  runtime_errors.rs  simulate.rs
cellscript/tests/: adversarial_0_13.rs  artifact_size.rs  backend_shape_baseline.json  ckb_compat_runner.rs  ckb_std_compat.rs  cli.rs  e2e_registry_devnet.rs  examples.rs  fuzzy_debug.rs  ickb_benchmark.rs  ickb_diff.rs  registry.rs  v0_14.rs  v0_16.rs  v0_17.rs  v0_18.rs
cellscript/website/: README.md  astro.config.mjs  package-lock.json  package.json
cli/: Cargo.toml
cli/src/: main.rs
consensus/: Cargo.toml
consensus/src/: lib.rs
core-utils/: Cargo.toml
core-utils/src/: lib.rs
crypto/hashes/: Cargo.toml
crypto/muhash/: Cargo.toml
exec/: API_GUIDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
exec/benches/: serialization_bench.rs
exec/examples/: cache_usage.rs  fixture_hashes.rs  schema_migration.rs  serialization_usage.rs  storage_versioning.rs  utils_usage.rs
exec/src/: execution_report.rs  lib.rs  projection.rs
exec/src/vm/: mod.rs  (+6 more)
exec/tests/: serialization_integration.rs  typed_cell_vectors.rs  vm_abi_integration.rs
math/: Cargo.toml
math/benches/: bench.rs
math/src/: lib.rs  uint.rs  wasm.rs
mempool/: Cargo.toml  README.md
mempool/src/: cellpool.rs  lib.rs  scorer.rs
state/: Cargo.toml  README.md
state/src/: cell_tree.rs  lib.rs  molecule.rs
(+695 files in other folders)
