[workspace]
resolver = "2"
exclude = ["cellscript"]
members = [
    "cli",
    "consensus",
    "crypto/hashes",
    "exec",
    "math",
    "mempool",
    "crypto/muhash",
    "state",
    "utils",
]

[workspace.package]
rust-version = "1.85.0"
version = "0.1.0"
authors = ["Myelin Network contributors"]
license = "MIT"
repository = "https://github.com/Myelin-Network/Myelin"
edition = "2021"
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "src/**/*.r",
    "proto/**/*.proto",
    "benches/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
]

[workspace.dependencies]
blake3 = { version = "1.8.2"}
log = "0.4.20"
myelin-exec = { version = "0.1.0", path = "exec" }
myelin-consensus = { version = "0.1.0", path = "consensus" }
myelin-cli = { version = "0.1.0", path = "cli" }
myelin-hashes = { version = "0.1.0", path = "crypto/hashes" }
myelin-math = { version = "0.1.0", path = "math" }
myelin-mempool = { version = "0.1.0", path = "mempool" }
myelin-muhash = { version = "0.1.0", path = "crypto/muhash" }
myelin-state = { version = "0.1.0", path = "state" }
myelin-utils = { version = "0.1.0", path = "utils" }

# external
aes = "0.8.3"
ahash = "0.8.6"
arc-swap = "1.6.0"
argon2 = "0.5.2"
async-channel = "2.0.0"
async-std = { version = "1.12.0", features = ['attributes'] }
async-stream = "0.3.5"
async-trait = "0.1.74"
base64 = "0.22.1"
bech32 = { version = "0.11.0" }
blake2b_simd = "=1.0.3"
bitcoin = "0.32.6"
bs58 = { version = "0.5.0", features = ["check"], default-features = false }
bytes = "1.7.1"
cc = "1.0.83"
cfb-mode = "0.8.2"
cfg-if = "1.0.0"
chacha20poly1305 = "0.10.1"
clap = { version = "4.4.7", features = ["derive", "string", "cargo"] }
convert_case = "0.6.0"
criterion = { version = "0.5.1", default-features = false }
crossbeam-channel = "0.5.8"
ctrlc = "3.4.1"
crypto_box = { version = "0.9.1", features = ["chacha20"] }
dashmap = "6.0.1"
derivative = "2.2.0"
derive_builder = "0.20.0"
derive_more = "0.99.17"
dhat = "0.3.2"
dirs = "5.0.1"
downcast = "0.11.0"
downcast-rs = "1.2.0"
duration-string = "0.4.0"
enum-primitive-derive = "0.3.0"
event-listener = "2.5.3" # TODO "3.0.1"
evpkdf = "0.2.0"
faster-hex = "0.9.0"
fixedstr = { version = "0.5.4", features = ["serde"] }
flate2 = "1.0.28"
futures = { version = "0.3.29" }
futures-util = { version = "0.3.29", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2.10", features = ["js"] }
h2 = "0.4.6"
# h2 = "0.3.21"
heapless = "0.8.0"
# heapless = "0.7.16"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.4.1"
hexplay = "0.3.0"
hmac = { version = "0.12.1", default-features = false }
home = "0.5.5"
http-body = "1.0.1"
http-body-util = "0.1.2"
igd-next = { version = "0.14.2", features = ["aio_tokio"] }
indexmap = "=2.2.6"
insta = { version = "1.43.1" }
intertrait = "0.2.2"
ipnet = "2.9.0"
itertools = "0.13.0"
js-sys = "=0.3.95"
keccak = "0.1.4"
local-ip-address = "0.6.1"
log4rs = "1.2.0"
mac_address = "1.1.7"
malachite-base = "0.4.4"
malachite-nz = "0.4.4"
md-5 = "0.10.6"
num = "0.4.1"
num_cpus = "1.16.0"
num-traits = "0.2.17"
once_cell = "1.18.0"
pad = "0.1.6"
parking_lot = "0.12.1"
paste = "1.0.15"
pbkdf2 = "0.12.2"
portable-atomic = { version = "1.5.1", features = ["float"] }
prost = "0.13.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
rand_distr = "0.4.3"
rayon = "1.8.0"
regex = "1.10.2"
ripemd = { version = "0.1.3", default-features = false }
rlimit = "0.10.1"
rocksdb = "0.24.0"
rv = "0.16.4"
secp256k1 = { version = "0.29.0", features = [
    "global-context",
    "rand-std",
    "serde",
] } # TODO "0.28.0"
separator = "0.4.1"
seqlock = "0.2.0"
serde = { version = "1.0.225", features = ["derive", "rc"] }
serde_bytes = "0.11.12"
serde_json = "1.0.145"
serde_repr = "0.1.18"
serde-value = "0.7.0"
serde-wasm-bindgen = "0.6.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
slugify-rs = "0.0.3"
smallvec = { version = "1.11.1", features = ["serde"] }
sorted-insert = "0.2.3"
subtle = { version = "2.5.0", default-features = false }
sysinfo = "0.31.2"
tempfile = "3.8.1"
textwrap = "0.16.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
toml = "0.8.8"
tonic = { version = "0.12.3", features = ["tls-webpki-roots", "gzip", "transport"] }
tonic-build = { version = "0.12.3", features = ["prost"] }
triggered = "0.1.2"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }
wasm-bindgen = { version = "=0.2.118", features = ["serde-serialize"] }
wasm-bindgen-futures = "=0.4.68"
wasm-bindgen-test = "=0.3.68"
console_log = "1.0.0"
web-sys = "=0.3.95"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
zeroize = { version = "1.6.0", default-features = false, features = ["alloc"] }
pin-project-lite = "0.2.13"
tower-http = { version = "0.5.2", features = [
    "map-response-body",
    "map-request-body",
] }
tower = "0.5.1"
chrono = "0.4.31"
indexed_db_futures = "0.5.0"
rustls = { version = "0.23", default-features = false, features = ["ring"] }


[profile.release]
lto = "thin"
strip = true
overflow-checks = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false

[profile.heap]
inherits = "release"
debug = true
strip = false

[workspace.lints.clippy]
empty_docs = "allow"
