[workspace]
members = [
    ".",
    "crates/cellscript-ckb-adapter",
    "examples/ckb-sdk-builder",
]
resolver = "2"

[package]
name = "cellscript"
version = "0.17.0"
edition = "2021"
rust-version = "1.85.0"
autobins = false
authors = ["CellScript Core Team"]
description = "CellScript compiler for the Cell model"
license = "MIT"
repository = "https://github.com/tsukifune-kosei/CellScript"
exclude = [
    ".gitignore",
    ".rustfmt.toml",
    ".github/",
    "docs/",
    "docs/wiki/",
    "editors/",
    "src/bin/",
    "tools/",
]

[[bin]]
name = "cellc"
path = "src/main.rs"
test = false

[lib]
name = "cellscript"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake2b_simd = "1.0"
blake3 = "1.8.2"
toml = "0.8"
hex = "0.4"

dashmap = "6.0"
indexmap = "=2.2.6"

log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "=4.5.49", features = ["derive"] }

colored = "2.1"

camino = "1.1"
ckb-vm = { version = "0.24", features = ["asm", "detect-asm"], optional = true }

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

[features]
default = []
vm-runner = ["dep:ckb-vm"]

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
ckb-testtool = "1.1"
ckb-std = { version = "1.1.0", default-features = false, features = ["type-id"] }
sha2 = "0.10"
regex = "1"
cellscript-ckb-adapter = { path = "crates/cellscript-ckb-adapter" }
ckb-types = "1.0.0"
