[package]
name = "myelin-consensus"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
hex.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
