[package]
name = "myelin-exec"
version = "0.1.0"
edition = "2021"
authors = ["Myelin developers"]
license = "MIT"
description = "Cell execution layer for the Myelin finite Cell ledger"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }

# Hashing (unified blake3)
blake3 = "1.5"
blake2b_simd = { workspace = true }

# Crypto
secp256k1 = { version = "0.29", features = ["recovery", "global-context"] }

# Errors
thiserror = "1.0"

# Parallel execution
rayon = "1.10"
parking_lot = "0.12"

# CKB-VM integration for script execution
ckb-vm = { version = "0.24", features = ["asm", "detect-asm"], optional = true }

# Myelin dependencies
myelin-hashes = { path = "../crypto/hashes", version = "0.1.0" }

# Logging
log = "0.4"

# For testing blake3 known vectors
hex = { version = "0.4", optional = true }

[dev-dependencies]
# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["vm"]
vm = ["ckb-vm", "hex"]  # VM integration enabled
vm-ipc = ["vm"]  # CKB VM v2 spawn/IPC syscall surface

[[bench]]
name = "serialization_bench"
harness = false
