[package]
name = "myelin-math"
description = "Myelin misc math library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
include.workspace = true
repository.workspace = true

[dependencies]
faster-hex.workspace = true
myelin-utils.workspace = true
malachite-base.workspace = true
malachite-nz.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
rand_chacha.workspace = true
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
