[package]
name = "myelin-state"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cell state management and data availability storage"

[dependencies]
# Core dependencies
myelin-exec = { path = "../exec", version = "0.1.0" }
myelin-hashes = { path = "../crypto/hashes", version = "0.1.0" }

# Database
rocksdb = { version = "0.24", default-features = false, features = ["snappy"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Hashing
blake3 = "1.5"
myelin-muhash = { path = "../crypto/muhash" }

# Concurrency
parking_lot = "0.12"

# Errors
thiserror = "1.0"

# Cache
lru = "0.18"

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
