[package]
name = "myelin-hashes"
description = "Myelin hashing functions"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
no-asm = ["keccak"]

[dependencies]
faster-hex.workspace = true
myelin-core-utils.workspace = true
keccak = { workspace = true, optional = true }
serde.workspace = true
blake3.workspace = true
sha2.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true

[target.'cfg(any(target_os = "windows", not(target_arch = "x86_64")))'.dependencies]
keccak.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
rand.workspace = true

[build-dependencies]
cc.workspace = true

[[bench]]
name = "bench"
harness = false
