[package]
name = "cellscript-ckb-adapter"
version = "0.21.1"
edition = "2021"
rust-version = "1.85.0"
publish = false
description = "Headless CKB adapter for CellScript compiler action plans"
license = "MIT"

[[bin]]
name = "cellscript-deploy"
path = "src/bin/cellscript-deploy.rs"

[dependencies]
anyhow = "1.0"
ckb-jsonrpc-types = "1.0.0"
ckb-hash = "1.0.0"
ckb-sdk = { path = "../../../../ckb-sdk-rust" }
ckb-types = "1.0.0"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
