[package]
name = "cellscript-wasm"
version = "0.20.0-rc.2"
edition = "2021"
rust-version = "1.85.0"
publish = false
description = "Browser-facing WASM bindings for the CellScript compiler (metadata path)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Forwards to the cellscript dependency's wasm feature, which gates
# out the cli/lsp/native modules.
wasm = ["cellscript/wasm"]

[dependencies]
cellscript = { path = "../..", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
