[package]
name = "novaseal_btc_verifier"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
hex = "0.4"
novaseal_btc_verifier_core = { path = "../novaseal_btc_verifier_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
