[package]
name = "novaseal_btc_verifier_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[workspace]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
k256 = { version = "0.13.4", default-features = false, features = ["schnorr"] }
